--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,7 +83,7 @@ dependencies:
   file_picker: ^3.0.4
   share_plus: ^4.0.10
   firebase_dynamic_links: ^4.3.2
-  onboarding_overlay: ^3.1.0
+//  onboarding_overlay: ^3.1.0
 dependency_overrides:
   firebase_messaging_platform_interface: 3.1.6
 
